--- a/nav/nav1.css
+++ b/nav/nav1.css
@@ -202,12 +202,21 @@ img {
     -webkit-transition: opacity 0.4s ease-in-out 0.4s;
     transition: opacity 0.4s ease-in-out 0.4s;
   }
-  
+  /* @media (max-width: 767px) {
+    .header--cta {
+      display: none;
+    }
+  } */
   .perspective {
     position: relative;
     width: 100%;
     height: 100%;
     overflow: hidden;
+  }
+ .perspective--modalview {
+    position: fixed;
+    -webkit-perspective: 1500px;
+    perspective: 1500px;
   }
   .container {
     position: relative;
@@ -233,6 +242,14 @@ img {
     transform: translateZ(-1800px) translateX(-50%) rotateY(45deg);
     outline: 30px solid #0f33ff;
   }
+/* .modalview .container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  } */
   .outer-nav {
     position: absolute;
     top: 50%;
@@ -341,3 +358,18 @@ ul li:nth-child(3) a {
 ul li:nth-child(4) a {
     background-color: #FF80B0;
 }
+/* .side-nav li.is-active {
+  color: #0f33ff;
+  -webkit-transition: color 0.4s ease-in-out;
+  transition: color 0.4s ease-in-out;
+}
+.side-nav li.is-active span {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transition: opacity 0.4s ease-in-out;
+  transition: opacity 0.4s ease-in-out;
+}
+.side-nav li.is-active::before {
+  left: -33px;
+  color: #fff;
+} */
